# rescue_pi

./: .gitignore  README.md  SETUP_STATUS.md  UDP.py  UDPS.py  camera-ros.service  run_camera_stack.sh  verify_stack.sh
docs/: INSTALL.md
savedMaps/: map_20260630_214218.yaml  map_20260630_214259.pgm  map_20260630_214259.yaml  map_20260630_221458.pgm  map_20260630_221458.yaml  map_20260630_221610.pgm  map_20260630_221610.yaml
src/camera_bridge/: package.xml  setup.py
src/camera_bridge/camera_bridge/: mjpeg_bridge.py
src/camera_bridge/launch/: camera.launch.py
src/lidar_slam_bringup/: README.md  package.xml  setup.cfg  setup.py
src/lidar_slam_bringup/config/: ekf.yaml  slam_toolbox.yaml
src/lidar_slam_bringup/launch/: slam.launch.py
src/lidar_slam_bringup/lidar_slam_bringup/: arm_home_guard.py  imu_node.py  imu_udp_bridge.py  qr_marker_node.py  slam_manager.py
src/ydlidar_ros2_driver-humble/params/: TminiPro.yaml
system/boot/: config.txt
system/libcamera/: imx708_noir.json
system/udev/: 99-rescue-pi.rules
