<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_bridge</name>
  <version>0.1.0</version>
  <description>MJPEG HTTP bridge: re-serves a ROS CompressedImage topic to browsers, and a launch file for camera_ros + the bridge.</description>
  <maintainer email="claudecode67420@gmail.com">pi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>camera_ros</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
